force-app/main/default/objects/RD_Defferals__c/fields/Actual_Deferral_Length__c.field-meta.xml
<CustomField>
    <fullName>Actual_Deferral_Length__c</fullName>
    <description>Actual Deferral Length = Deferral Tracking End Date - Signed Date</description>
    <formula>Deferral_Tracking_End_Date__c -  Signed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Deferral Tracking End Date - Contract Signed Date</inlineHelpText>
    <label>Actual Deferral Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>