force-app/main/default/objects/RD_Defferals__c/fields/Actual_Delay__c.field-meta.xml
<CustomField>
    <fullName>Actual_Delay__c</fullName>
    <description>Actual Delay = Deferral Tracking End Date - Contingency Deadline</description>
    <formula>IF(Deferral_Tracking_End_Date__c-Contingency_Deadline__c&lt;0,0,Deferral_Tracking_End_Date__c-Contingency_Deadline__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Deferral Tracking End Date - Contingency Deadline</inlineHelpText>
    <label>Actual Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>