force-app/main/default/objects/RD_Defferals__c/fields/Amended_Deferral_Length__c.field-meta.xml
<CustomField>
    <fullName>Amended_Deferral_Length__c</fullName>
    <description>Amended Deferral Length = Amendment Extension Date - Contract Signed Date</description>
    <formula>Contracted_Amendment_Date__c - Signed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amendment Extension Date - Contract Signed Date</inlineHelpText>
    <label>Amended Deferral Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>