force-app/main/default/objects/RD_Defferals__c/fields/Closed_Won_Count__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Count__c</fullName>
    <formula>IF(ISPICKVAL(Deferral_Status__c,&quot;Closed - Won&quot;),1,0)</formula>
    <label>Closed - Won Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>