force-app/main/default/objects/RD_Defferals__c/fields/Contingency_Type__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Type__c</fullName>
    <formula>IF( 
  INCLUDES( Contract__r.Contingency_Type__c , &quot;ROR&quot;) , 
  &quot;ROR&quot;,
  &quot;, &quot;)
&amp; 
IF( 
  INCLUDES( Contract__r.Contingency_Type__c , &quot;POC&quot;) ,
  &quot;POC&quot;, 
  &quot;, &quot;)
&amp; 
IF( 
  INCLUDES( Contract__r.Contingency_Type__c , &quot;Software Feature Delivery&quot;) , 
  &quot;Software Feature Delivery&quot;, 
  &quot;, &quot;) 
&amp; 
IF( 
  INCLUDES( Contract__r.Contingency_Type__c , &quot;Services Delivery&quot;) , 
  &quot;Services Delivery&quot;, 
  &quot;, &quot;) 
&amp; 
  IF( 
    INCLUDES( Contract__r.Contingency_Type__c , &quot;Terms &amp; Conditions&quot;) , 
    &quot;Terms &amp; Conditions&quot;, 
    &quot;, &quot;) 
&amp; 
IF( 
  INCLUDES( Contract__r.Contingency_Type__c , &quot;Payment Terms&quot;) , 
  &quot;Payment Terms&quot;, 
  &quot;, &quot;) 
&amp; 
IF( 
  INCLUDES( Contract__r.Contingency_Type__c , &quot;Payment Delayed&quot;) ,
  &quot;Payment Delayed&quot;, 
  &quot;, &quot;)</formula>
    <label>Contingency Type</label>
    <type>Text</type>
</CustomField>