force-app/main/default/objects/RD_Defferals__c/fields/Contingency_Update__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Update__c</fullName>
    <label>Contingency Update</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>