force-app/main/default/objects/RD_Defferals__c/fields/Contracted_Amendment_Date__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Amendment_Date__c</fullName>
    <formula>Contract__r.Contracted_Amendment_Date__c</formula>
    <label>Contracted Amendment Date</label>
    <type>Date</type>
</CustomField>