force-app/main/default/objects/RD_Defferals__c/fields/Deferral_Tracking_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Tracking_End_Date__c</fullName>
    <description>End date of contingent deferral tracking.</description>
    <inlineHelpText>End date of contingent deferral tracking.</inlineHelpText>
    <label>Deferral Tracking End Date</label>
    <type>Date</type>
</CustomField>