force-app/main/default/objects/RD_Defferals__c/fields/Health_Status_Color__c.field-meta.xml
<CustomField>
    <fullName>Health_Status_Color__c</fullName>
    <formula>IF(AND(ISPICKVAL( Health_Status__c , &quot;Green&quot;)), IMAGE( &quot;/servlet/servlet.FileDownload?file=00P50000005vPYv&quot;, &quot;Green: Good&quot;),
 IF (AND(ISPICKVAL(Health_Status__c , &quot;Yellow&quot;)), IMAGE( &quot;/servlet/servlet.FileDownload?file=00P50000005vPZ5&quot;, &quot;Amber: Warning&quot;),
 IF (AND(ISPICKVAL(Health_Status__c , &quot;Red&quot;)), IMAGE( &quot;/servlet/servlet.FileDownload?file=00P50000005vPZ0&quot;, &quot;Red: Critical&quot;),null)))</formula>
    <label>Health Status</label>
    <type>Text</type>
</CustomField>