force-app/main/default/objects/RD_Defferals__c/fields/Pending_Amendment_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_Amendment_Date__c</fullName>
    <formula>Contract__r.Pending_Amendment_Date__c</formula>
    <label>Pending Amendment Date</label>
    <type>Date</type>
</CustomField>