force-app/main/default/objects/RD_Defferals__c/fields/Projected_Deferral_Length__c.field-meta.xml
<CustomField>
    <fullName>Projected_Deferral_Length__c</fullName>
    <description>Projected Deferral Length = Projected End Date - Contract Signed Date</description>
    <formula>RD_Projected_End_Date__c - Signed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Projected End Date - Contract Signed Date</inlineHelpText>
    <label>Projected Deferral Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>