force-app/main/default/objects/RD_Defferals__c/validationRules/Select_Competitor_if_Checkbox_Checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Competitor_if_Checkbox_Checked</fullName>
    <active>true</active>
    <description>Validation Rule to ensure a competitor is selected if the deal is competitive.</description>
    <errorConditionFormula>AND( Competitive__c  = TRUE ,   ISPICKVAL( Competitor__c , &quot;&quot;)  )</errorConditionFormula>
    <errorDisplayField>Competitor__c</errorDisplayField>
    <errorMessage>Please select a competitor. If the desired competitor doesn&apos;t show up, please contact your Salesforce administrator.</errorMessage>
</ValidationRule>