force-app/main/default/objects/RD_Defferals__c/listViews/Current_Conditional_Deferrals.listView-meta.xml
<ListView>
    <fullName>Current_Conditional_Deferrals</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Deferral_Status__c</columns>
    <columns>Health_Status__c</columns>
    <columns>RD_Amount__c</columns>
    <columns>RD_One_Time_Fees__c</columns>
    <columns>RD_Total_Deferral__c</columns>
    <columns>RD_Projected_End_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Conditional Deferrals</label>
</ListView>